# scintpy

./: .gitignore  .pre-commit-config.yaml  Initial Guidelines for generating the scintillation time series for ISMs.txt  LICENSE  README.md  gp_test.txt  main.bbl-SAVE-ERROR  main.tex  param_notes_cubesats.txt  pyproject.toml  rho.bib  test.py
Original Template/: main.tex
refs_files/: Latitudinal and Local Time Variation of.txt  S0273117723007433.bib  Time_Harmonic_Electromagnetic_Fields.bibtex  pericles_1944799x14.bib  pericles_1944799x39.bib  pericles_1944799x51.bib
scintpy/: __init__.py  download.py  main.py
scintpy/cached_data/: space_track_response_cubesat_text.txt
scintpy/geom/: __init__.py  _geom_plots.py  _orbit_propagation.py  _tle_download.py  geom.py  geom_plots.py  orbit_propagation.py  plots.py  scenario.py  test_tle_data.txt  tle_download.py  tle_request.py
scintpy/geom/cached_data/: celestrak_response_cubesat_text.txt  celestrak_response_gnss_text.txt  celestrak_response_gps_text.txt  space_track_response_cubesat_text.txt  space_track_response_gnss_text.txt  space_track_response_gps_text.txt
scintpy/geom/sat_pos_data/: aerocube_6b.mat  cubesat  cubesat.mat  cute_1.mat  duchifat_1.mat  gnss  gnss.mat  propcube_3.mat  seeds.mat  trigisat.mat  wnisat_1_sonate.mat
scintpy/offline_data/: celestrak_response_text.txt  space_track_response_text.txt
scintpy/skyfield-data/: gnss.csv
secs/: conclusions.tex  introduction.tex  irregularity_parameter_estimation.tex  ps_theory.tex  refactored_TPPSM.tex  time_series_methodology.tex
tests/: test_norad_ids.py  test_plot_sat_orbits.py  test_plot_sat_orbts.py  test_sat_orbts.py  test_tles.py
