[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scintpy"
version = "0.1.0"
description = "A multimodel scintillation simulator."
authors = ["tapyu <rubem.engenharia@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
skyfield = ">=1.49"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
mypy = "^1.11.2"
pyupgrade = "^3.17.0"
pre-commit = "^3.8.0"


[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "B", # `flake8-bugbear` (B) - common bugs and design issues
    "C", # Pylint (PL) - Convention (C) - Complexity checks (e.g., McCabe complexity)
    "E", # Pylint (PL) - Error (E) - (e.g., syntax, whitespace)
    "W", # Pylint (PL) - Warning (W) - Warnings for certain Python style guide deviations
    "F", # Pyflakes (F) - Checks for undefined or unused variables (`flake8`-like warnings)
    "I", # isort (I) - Import-related checks (e.g., checking for order or unused imports)
    "Q", # `flake8-quotes` (Q) - Checks for quotes consistency (single vs. double quotes)
]
ignore = [
    "E501" # Line too long
]
[tool.ruff.lint.mccabe]
max-complexity = 10